--- a/src/http/gui/app/styles/fonts.scss
+++ b/src/http/gui/app/styles/fonts.scss
@@ -15,3 +15,18 @@
   font-weight: normal;
   font-style: normal;
 }
+
+$lato-font-path: '/assets/fonts/lato';
+@font-face {
+  font-family: 'Lato';
+  src: url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.eot');
+  src: local('Lato Hairline Italic'),
+       local('Lato-HairlineItalic'),
+       url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.eot?#iefix') format('embedded-opentype'),
+       url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.woff2') format('woff2'),
+       url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.woff') format('woff'),
+       url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.ttf') format('truetype'),
+       url('#{$lato-font-path}/lato-hairlineitalic/lato-hairlineitalic.svg#lato') format('svg');
+  font-weight: 100;
+  font-style: italic;
+}
