--- a/src/http/gui/app/templates/components/onezone-sidebar.hbs
+++ b/src/http/gui/app/templates/components/onezone-sidebar.hbs
@@ -7,41 +7,41 @@
 <div class="accordion-container">
   {{!-- TODO: use bs-accordion (Ember component) --}}
   {{!-- add class "collapse in" to uncollapse by default --}}
-  <div class="main-accordion">
-    <div class="main-accordion-group">
-      <div class="main-accordion-heading">
-        <a class="main-accordion-toggle" data-toggle="collapse" href="#collapse-connect">
+  <div class="accordion main-accordion">
+    <div class="accordion-group main-accordion-group">
+      <div class="accordion-heading main-accordion-heading">
+        <a class="accordion-toggle main-accordion-toggle" data-toggle="collapse" href="#collapse-connect">
           <h1>{{t 'onezone.sidebar.connectHead'}}</h1>
           <div class="arrow-down"></div>
         </a>
       </div>
-      <div id="collapse-connect" class="accordion-body collapse">
+      <div id="collapse-connect" class="accordion-body main-accordion-body collapse">
         <div class="accordion-inner">
           {{accounts-list}}
         </div>
       </div>
     </div>
-    <div class="main-accordion-group">
-      <div class="main-accordion-heading">
-        <a class="main-accordion-toggle" data-toggle="collapse" href="#collapse-spaces">
+    <div class="accordion-group main-accordion-group">
+      <div class="accordion-heading main-accordion-heading">
+        <a class="accordion-toggle main-accordion-toggle" data-toggle="collapse" href="#collapse-spaces">
           <h1>{{t 'onezone.sidebar.manageSpacesHead'}}</h1>
           <div class="arrow-down"></div>
         </a>
       </div>
-      <div id="collapse-spaces" class="accordion-body collapse">
+      <div id="collapse-spaces" class="accordion-body main-accordion-body collapse">
         <div class="accordion-inner">
           {{spaces-accordion spaces=spaces}}
         </div>
       </div>
     </div>
-    <div class="main-accordion-group">
-      <div class="main-accordion-heading">
-        <a class="main-accordion-toggle" data-toggle="collapse" href="#collapse-files">
+    <div class="accordion-group main-accordion-group">
+      <div class="accordion-heading main-accordion-heading">
+        <a class="accordion-toggle main-accordion-toggle" data-toggle="collapse" href="#collapse-files">
           <h1>{{t 'onezone.sidebar.filesHead'}}</h1>
           <div class="arrow-down"></div>
         </a>
       </div>
-      <div id="collapse-files" class="accordion-body collapse">
+      <div id="collapse-files" class="accordion-body main-accordion-body collapse">
         <div class="accordion-inner">
           {{#each providers as |p|}}
             <ul>
