--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -1,5 +1,31 @@
-<div class="accordion">
+<div class="accordion spaces-accordion">
   {{#each spaces as |s|}}
     {{spaces-accordion-item space=s}}
   {{/each}}
+
+  {{!-- faking the accordion group... this should be separate class --}}
+  <div class="accordion-group spaces-accordion-group">
+    <div class="accordion-heading spaces-accordion-heading">
+      <a class="accordion-toggle spaces-accordion-toggle create-new" href="#collapse-space-add">
+        <div class="space-icon">
+          {{one-icon icon='space-add'}}
+        </div>
+        <div class="space-header">
+          {{t 'onezone.spacesAccordion.createNewSpace'}}
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="accordion-group spaces-accordion-group">
+    <p class="space-add-text">
+      {{t 'onezone.spacesAccordion.createNewSpaceText'}}
+    </p>
+  </div>
+
+  <div class="accordion-group spaces-accordion-group">
+    {{#bs-button type="primary"}}
+      {{t 'onezone.spacesAccordion.readMore'}}
+    {{/bs-button}}
+  </div>
 </div>
