--- a/src/http/gui/app/templates/components/account-add.hbs
+++ b/src/http/gui/app/templates/components/account-add.hbs
@@ -2,5 +2,5 @@
   {{one-icon iconName='oneicon-checkbox-check' colorClass='red-1'}}
 </div>
 <div class="account-label">
-  {{t 'components.account'}}
+  {{t 'onezone.accountAdd.connectNewAccount'}}
 </div>
