--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -17,13 +17,11 @@
     </div>
   </div>
 
-  <div class="accordion-group spaces-accordion-group">
-    <p class="space-add-text">
-      {{t 'onezone.spacesAccordion.createNewSpaceText'}}
-    </p>
+  <div class="sidebar-row space-add-text-row">
+    {{t 'onezone.spacesAccordion.createNewSpaceText'}}
   </div>
 
-  <div class="accordion-group spaces-accordion-group">
+  <div class="sidebar-row space-add-read-more-row">
     {{#bs-button type="primary"}}
       {{t 'onezone.spacesAccordion.readMore'}}
     {{/bs-button}}
