VFS-1672: Work snapshot, new account menu

--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -9,3 +9,17 @@
     {{/if}}
   {{/if}}
 {{/each}}
+{{#if session.isAuthenticated}}
+  <li class="dropdown">
+    {{!-- TODO: beware long user names --}}
+    <a href="#" class="dropdown-toggle account-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+      <span class="account-icon">{{one-icon icon="user-profile"}}</span>
+      <span class="account-label">{{session.opData.sessionDetails.userName}} <span class="caret"></span></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li>{{main-menu-item linkTo='onezone' titleI18n='application.onezone'}}</li>
+      <li role="separator" class="divider"></li>
+      <li>{{main-menu-item linkTo='home.logout' titleI18n='application.logout'}}</li>
+    </ul>
+  </li>
+{{/if}}
