--- a/src/http/gui/app/styles/main-menu.scss
+++ b/src/http/gui/app/styles/main-menu.scss
@@ -105,6 +105,7 @@
     li {
       text-transform: uppercase;
       font-size: $top-font-size;
+      background: transparent;
 
       a {
         height: $top-height;
@@ -145,6 +146,54 @@
     padding-top:    10px;
     padding-bottom: 10px;
     line-height: $line-height-computed;
+  }
+
+  .account-dropdown {
+    .account-icon {
+      position: absolute;
+      // pull up icon
+      margin-top: -2px;
+      font-size: 1.6em;
+    }
+    .account-label {
+      padding-left: 32px;
+    }
+  }
+
+  .dropdown-menu {
+    font-size: inherit;
+    // TODO: mobile menu color variable
+    background-color: #2E2E2E;
+    padding: 10px;
+
+    .divider {
+      // TODO: same as menu bottom line color
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+
+  // Open dropdowns
+  .open > a {
+    &,
+    &:hover,
+    &:focus {
+      color: white;
+      background-color: transparent !important;
+      border-color: transparent;
+    }
+  }
+
+  .dropdown-menu {
+    border-radius: 0 !important;
+
+    a {
+      text-decoration: none !important;
+      &:hover {
+        &::after {
+          content: none;
+        }
+      }
+    }
   }
 
   @media (max-width: $grid-float-breakpoint-max) {
