--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -5,5 +5,8 @@
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
 <div class="onezone-container-application">
-  {{outlet}}
+  <div class="onezone-container-application-inner">
+    {{onezone-atlas}}
+    {{outlet}}
+  </div>
 </div>
