--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -40,8 +40,7 @@
         {{/each}}
         <li class='get-support'>
           <div class="icon">
-            {{one-icon}}
-            {{!-- {{one-icon icon="add"}} --}}
+            {{one-icon icon="add"}}
           </div>
           <div class="label">
             {{t 'onezone.spacesAccordionItem.getSupport'}}
