--- a/src/http/gui/app/templates/components/account-add.hbs
+++ b/src/http/gui/app/templates/components/account-add.hbs
@@ -1,6 +1,6 @@
 <div class="account-icon">
-  {{one-icon iconName='oneicon-checkbox-check' colorClass='red-1'}}
+  {{one-icon icon='add'}}
 </div>
-<div class="account-label">
+<div class="account-label connect-new">
   {{t 'onezone.accountAdd.connectNewAccount'}}
 </div>
