--- a/src/http/gui/app/templates/components/providers-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion-item.hbs
@@ -38,8 +38,7 @@
           {{/each}}
           <li class='get-support'>
             <div class="icon">
-              {{one-icon}}
-              {{!-- {{one-icon icon="add"}} --}}
+              {{one-icon icon="add"}}
             </div>
             <div class="label">
               {{t 'onezone.spacesAccordionItem.getSupport'}}
