--- a/src/http/gui/app/templates/components/providers-accordion.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion.hbs
@@ -9,7 +9,7 @@
       <span class="input-group-btn">
         <!-- TODO: btn-search class -->
         <button class="btn btn-search" type="button">
-          <span class="glyphicon glyphicon-search text-muted"></span>
+          {{one-icon icon="search"}}
         </button>
       </span>
     </div>
