VFS-1672: Onezone panels

--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -6,7 +6,8 @@
 
 <div class="onezone-container-application">
   <div class="onezone-container-application-inner">
-    {{onezone-atlas}}
-    {{outlet}}
+    {{#onezone-atlas}}
+      {{outlet}}
+    {{/onezone-atlas}}
   </div>
 </div>
