--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -19,6 +19,9 @@ $color-provider-not-working: #D86669;
 
 $color-onezone-search: #2A2A2A;
 
+$color-onezone-panel-heading: $color-red-1;
+$color-onezone-panel-body: #60687E;
+
 .color-provider-working {
   color: $color-provider-working;
 }
@@ -51,11 +54,76 @@ $search-box-height: 36px;
     font-size: 1.3em;
     color: white;
     background-color: $color-onezone-search;
-    border: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    border-radius: 0;
   }
 }
 
+.panel-onezone {
+  margin: 40px;
+  padding: 70px;
+  border-top: 5px $color-red-1 solid;
+  background: white;
 
+  border-radius: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+
+
+  .panel-heading {
+    font-family: 'Myriad Pro Semibold', 'Open Sans', sans-serif;
+    font-size: $body-font-size * 1.8;
+    color: $color-onezone-panel-body;
+  }
+  .panel-body {
+    color: $color-onezone-panel-body;
+
+    // based on: http://www.456bereastreet.com/archive/201105/styling_ordered_list_numbers/
+    ol {
+      counter-reset: li; /* Initiate a counter */
+      margin-left: 0; /* Remove the default left margin */
+      margin-top: 20px;
+      padding-left: 0; /* Remove the default left padding */
+
+      li {
+        position: relative; /* Create a positioning context */
+        margin: 0 0 6px 62px; /* Give each list item a left margin to make room for the numbers */
+        list-style: none; /* Disable the normal item numbering */
+      }
+
+      li:before {
+        content:counter(li); /* Use the counter as content */
+        counter-increment: li; /* Increment the counter by 1 */
+        /* Position and style the number */
+        position: absolute;
+        top: 1px;
+        left: -60px;
+        width: 1.8em;
+        height: 1.8em;
+        padding: 1px;
+        // pull down number
+        padding-top: 3px;
+        font-size: 0.8em;
+        border: none;
+        color: #fff;
+        background: $color-onezone-panel-body;
+        border-radius: 4px;
+        text-align: center;
+      }
+    }
+  }
+
+  &.panel-onezone-alert {
+    .panel-heading {
+      color: $color-onezone-panel-heading;
+      text-transform: none;
+    }
+
+  }
+}
 
 .onezone-fog {
   position: fixed;
