--- a/src/http/gui/app/templates/components/onezone-sidebar.hbs
+++ b/src/http/gui/app/templates/components/onezone-sidebar.hbs
@@ -17,7 +17,7 @@
       </div>
       <div id="collapse-connect" class="accordion-body main-accordion-body collapse">
         <div class="accordion-inner">
-          {{accounts-list}}
+          {{accounts-list authorizers=authorizers}}
         </div>
       </div>
     </div>
