--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -1,7 +1,7 @@
 <div class="onezone-fog"></div>
 
 {{onezone-sidebar tagName='nav' class='onezone-sidebar'
-  providers=model.providers spaces=model.spaces}}
+  providers=model.providers spaces=model.spaces authorizers=model.authorizers}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
 <div class="onezone-container-application">
