VFS-1672: Some work on social icons for login

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -163,3 +163,15 @@ html {
     margin-right:-4px;
 }
 /*** ***/
+
+.xs-left {
+  @include respond-to(screen-xs) {
+    text-align: left !important;
+  }
+}
+
+.xs-right {
+  @include respond-to(screen-xs) {
+    text-align: right !important;
+  }
+}
