--- a/src/http/gui/app/templates/home/index.hbs
+++ b/src/http/gui/app/templates/home/index.hbs
@@ -132,17 +132,11 @@
       <div class="container-fluid login-buttons-container">
         {{!-- TODO: links --}}
         <div class="row row-centered">
-          <div class="col-xs-2 col-centered">
-            {{social-box type='twitter'}}
+          <div class="col-xs-6 text-right">
+            {{social-box type='github' link='https://github.com/onedata'}}
           </div>
-          <div class="col-xs-2 col-centered">
-            {{social-box type='github'}}
-          </div>
-          <div class="col-xs-2 col-centered">
-            {{social-box type='facebook'}}
-          </div>
-          <div class="col-xs-2 col-centered">
-            {{social-box type='google'}}
+          <div class="col-xs-6 text-left">
+            {{social-box type='facebook' link='https://www.facebook.com/onedataorg/'}}
           </div>
         </div>
       </div>
